[gd_scene format=3 uid="uid://dxerjja01tmkl"]

[ext_resource type="FontFile" uid="uid://bc5568tcsyop8" path="res://assets/Montserrat-Medium.ttf" id="1_3cfgd"]
[ext_resource type="Script" uid="uid://p571pl2p00cv" path="res://src/main.gd" id="1_fyndt"]
[ext_resource type="Script" uid="uid://cdcsxps2yx4uw" path="res://src/no_button.gd" id="1_gh0ne"]
[ext_resource type="Shader" uid="uid://cqxn5p7kd6u24" path="res://src/bg_glow_center.gdshader" id="2_kmhfv"]
[ext_resource type="FontFile" uid="uid://cos4gvmujlvil" path="res://assets/PlayfairDisplay-SemiBold.ttf" id="3_3cfgd"]
[ext_resource type="Script" uid="uid://cu1gi5w5sawn8" path="res://src/yes_button.gd" id="4_3cfgd"]
[ext_resource type="AudioStream" uid="uid://dxosbuyplayx1" path="res://assets/retroindiejosh_pattern.wav" id="4_kf8lf"]
[ext_resource type="Texture2D" uid="uid://bsf47lhsod1k1" path="res://assets/particle_circle.png" id="7_rlaii"]
[ext_resource type="AudioStream" uid="uid://bbl7jtgugcpc" path="res://assets/single-piano-note-a4_100bpm_C_major.wav" id="8_5mrjc"]

[sub_resource type="ShaderMaterial" id="ShaderMaterial_rlaii"]
shader = ExtResource("2_kmhfv")
shader_parameter/center_color = Color(0.13, 0.13, 0.15, 1)
shader_parameter/edge_color = Color(0.11, 0.11, 0.12, 1)

[sub_resource type="Curve" id="Curve_rlaii"]
_data = [Vector2(0.8989363, 1), 0.0, 0.0, 0, 0, Vector2(1, 0), 0.0, 0.0, 0, 0]
point_count = 2

[sub_resource type="Gradient" id="Gradient_rlaii"]
offsets = PackedFloat32Array(0, 0.9, 1)
colors = PackedColorArray(1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 0)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_eewff"]
bg_color = Color(0.5411765, 0.24313726, 0.30980393, 1)
corner_radius_top_left = 64
corner_radius_top_right = 64
corner_radius_bottom_right = 64
corner_radius_bottom_left = 64
corner_detail = 20

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_ts572"]
bg_color = Color(0.78039217, 0.36078432, 0.43529412, 1)
border_color = Color(0.9607843, 0.9019608, 0.9098039, 1)
corner_radius_top_left = 64
corner_radius_top_right = 64
corner_radius_bottom_right = 64
corner_radius_bottom_left = 64
corner_detail = 20

[node name="Main" type="Control" unique_id=1292083688]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_fyndt")

[node name="Background" type="ColorRect" parent="." unique_id=1632626786]
material = SubResource("ShaderMaterial_rlaii")
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0.10980392, 0.10980392, 0.11764706, 1)

[node name="BackgroundParticlesEmitter" type="Control" parent="." unique_id=2006428330]
layout_mode = 1
anchors_preset = 2
anchor_top = 1.0
anchor_bottom = 1.0
offset_top = -40.0
offset_right = 40.0
grow_vertical = 0
pivot_offset_ratio = Vector2(0, 1)

[node name="CPUParticles2D" type="CPUParticles2D" parent="BackgroundParticlesEmitter" unique_id=430644172]
position = Vector2(0, 40)
texture = ExtResource("7_rlaii")
lifetime = 32.0
preprocess = 32.0
direction = Vector2(0.5, -0.5)
gravity = Vector2(0, 0)
initial_velocity_min = 100.0
initial_velocity_max = 160.0
scale_amount_min = 0.7
scale_amount_max = 1.3
scale_amount_curve = SubResource("Curve_rlaii")
color = Color(0.9607843, 0.9019608, 0.9098039, 1)
color_ramp = SubResource("Gradient_rlaii")

[node name="BackgroundTrack" type="AudioStreamPlayer" parent="." unique_id=423735634]
stream = ExtResource("4_kf8lf")

[node name="Headline" type="Label" parent="." unique_id=1596191804]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -213.5
offset_top = -73.5
offset_right = 213.5
offset_bottom = -6.5
grow_horizontal = 2
grow_vertical = 2
pivot_offset_ratio = Vector2(0.5, 0.5)
theme_override_colors/font_color = Color(0.9607843, 0.9019608, 0.9098039, 1)
theme_override_fonts/font = ExtResource("3_3cfgd")
theme_override_font_sizes/font_size = 48
text = "Will you marry me?"

[node name="NoButton" type="Button" parent="." unique_id=2069734064]
custom_minimum_size = Vector2(180, 64)
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -200.0
offset_top = 30.0
offset_right = -20.0
offset_bottom = 94.0
grow_horizontal = 2
grow_vertical = 2
pivot_offset_ratio = Vector2(0.5, 0.5)
theme_override_colors/font_color = Color(0.9607843, 0.9019608, 0.9098039, 1)
theme_override_colors/font_focus_color = Color(0.9607843, 0.9019608, 0.9098039, 1)
theme_override_colors/font_pressed_color = Color(0.9607843, 0.9019608, 0.9098039, 1)
theme_override_colors/font_hover_color = Color(0.9607843, 0.9019608, 0.9098039, 1)
theme_override_colors/font_hover_pressed_color = Color(0.9607843, 0.9019608, 0.9098039, 1)
theme_override_colors/font_disabled_color = Color(0.9607843, 0.9019608, 0.9098039, 1)
theme_override_fonts/font = ExtResource("1_3cfgd")
theme_override_font_sizes/font_size = 32
theme_override_styles/normal = SubResource("StyleBoxFlat_eewff")
theme_override_styles/pressed = SubResource("StyleBoxFlat_eewff")
theme_override_styles/hover = SubResource("StyleBoxFlat_eewff")
theme_override_styles/disabled = SubResource("StyleBoxFlat_eewff")
text = "No"
script = ExtResource("1_gh0ne")

[node name="YesButton" type="Button" parent="." unique_id=777411899]
custom_minimum_size = Vector2(180, 64)
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = 20.0
offset_top = 30.0
offset_right = 200.0
offset_bottom = 94.0
grow_horizontal = 2
grow_vertical = 2
pivot_offset_ratio = Vector2(0.5, 0.5)
theme_override_colors/font_color = Color(0.9607843, 0.9019608, 0.9098039, 1)
theme_override_colors/font_focus_color = Color(0.9607843, 0.9019608, 0.9098039, 1)
theme_override_colors/font_pressed_color = Color(0.9607843, 0.9019608, 0.9098039, 1)
theme_override_colors/font_hover_color = Color(0.9607843, 0.9019608, 0.9098039, 1)
theme_override_colors/font_hover_pressed_color = Color(0.9607843, 0.9019608, 0.9098039, 1)
theme_override_colors/font_disabled_color = Color(0.9607843, 0.9019608, 0.9098039, 1)
theme_override_fonts/font = ExtResource("1_3cfgd")
theme_override_font_sizes/font_size = 32
theme_override_styles/normal = SubResource("StyleBoxFlat_ts572")
theme_override_styles/pressed = SubResource("StyleBoxFlat_ts572")
theme_override_styles/hover = SubResource("StyleBoxFlat_ts572")
theme_override_styles/disabled = SubResource("StyleBoxFlat_ts572")
text = "Yes"
script = ExtResource("4_3cfgd")

[node name="PianoA4" type="AudioStreamPlayer" parent="." unique_id=1694427683]
stream = ExtResource("8_5mrjc")

[connection signal="mouse_entered" from="NoButton" to="NoButton" method="_on_mouse_entered"]
[connection signal="mouse_entered" from="YesButton" to="YesButton" method="_on_mouse_entered"]
[connection signal="mouse_exited" from="YesButton" to="YesButton" method="_on_mouse_exited"]
[connection signal="pressed" from="YesButton" to="." method="_on_yes_button_pressed"]
[connection signal="pressed" from="YesButton" to="YesButton" method="_on_pressed"]
